# fastapi_mongodb

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_lint.txt  requirements_prod.txt  requirements_test.txt
app/: main.py
app/api/: routers.py
app/core/: database.py  settings.py
app/models/: task.py
app/schemas/: task.py
tests/: conftest.py  test_routers.py
