[project]
name = "fastapi_mongodb"
version = "0.1.1"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 313
known_fastapi = [
    "fastapi",
    "beanie",
    "pydantic",
]
known_project = [
    "app",
]
sections = ["STDLIB", "THIRDPARTY", "FASTAPI", "PROJECT", "LOCALFOLDER"]
include_trailing_comma = true  # Add trailing commas for consistency
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

skip = ["__init__.py", ".gitignore"]
skip_glob = [".venv/*", ".idea/*"]

[tool.ruff]
target-version = "py313"
line-length = 100
lint.select = ["E4", "E7", "E9", "C90", "C901", "W", "F"]
lint.ignore = ["E501", "F403", "F405", "W605"]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
source = ["app"]

[tool.coverage.report]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_report"
title = "FastAPI-MongoDB Coverage Report"
